--- a/Form/index.html
+++ b/Form/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8">
     <title> Registration form</title>
-    <meta name="keywords" content="example, JavaScript Form Validation, Sample registration form" />
+    <meta name="keywords" content=" registration form" />
     <meta name="description"
-        content="This document is an example of JavaScript Form Validation using a sample registration form. " />
+        content=" registration form. " />
     <link rel='stylesheet' href='validation.css' type='text/css' />
     <script src="registration-form-validation.js"></script>
 </head>
